--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.8)
-project(RoboBoat_2026)
+cmake_minimum_required(VERSION 3.16)
+project(roboboat_2026)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -23,8 +23,10 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-install(DIRECTORY launch API config tf
+
+install(DIRECTORY launch  config 
   DESTINATION share/${PROJECT_NAME}
 )
+
 
 ament_package()
