change .cfg only

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,9 @@ zip_safe = True
 console_scripts =
     tf_node = roboboat_2026.test_pub:main
     test_node = roboboat_2026.api.gps.gps_node:main
+
+[options.data_files]
+# Install all launch files
+share/roboboat_2026/launch =
+    launch/sensors.launch.py
+    launch/other.launch.py
