--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,5 @@ zip_safe = True
 [options.entry_points]
 console_scripts =
     tf_node = roboboat_2026.test_pub:main
-    test_node = roboboat_2026.api.gps.gps_node:main
+    gps_node = roboboat_2026.api.gps.gps_node:main
 
