update sensor  launch file, update setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,4 +16,7 @@ zip_safe = True
 console_scripts =
     tf_node = roboboat_2026.test_pub:main
     gps_node = roboboat_2026.api.gps.gps_node:main
+    lidar_costmap = roboboat_2026.mapping.lidar_costmap:main
+    ekf_node = roboboat_2026.navigation.ekf:main
+    
 
