--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <depend>simpole_pid</depend>
   <export>
     <build_type>ament_python</build_type>
   </export>
