--- a/package.xml
+++ b/package.xml
@@ -4,13 +4,14 @@
   <name>roboboat_2026</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <maintainer email="chase001cz@gmail.com">root</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+  <exec_depend>ros2launch</exec_depend>
 
   <depend>simpole_pid</depend>
   <export>
